infrastructure/kube/keep-test/monitoring/grafana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      securityContext:
          runAsUser: 472
          fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:9.0.5
          ports:
            - name: grafana
              containerPort: 3000
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: 500M
              cpu: "500m"
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-dashboards-files
              mountPath: /var/lib/grafana/dashboards
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: false
            - name: grafana-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
              readOnly: false
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-dashboards-files
          configMap:
            name: grafana
            defaultMode: 420
            items:
              - key: clients-dashboard.json
                path: clients-dashboard.json
        - name: grafana-datasources
          configMap:
            name: grafana
            defaultMode: 420
            items:
              - key: prometheus.yaml
                path: prometheus.yaml
        - name: grafana-dashboards
          configMap:
            name: grafana
            defaultMode: 420
            items:
              - key: dashboards.yaml
                path: dashboards.yaml
